--- a/share/spack/templates/container/Dockerfile
+++ b/share/spack/templates/container/Dockerfile
@@ -23,7 +23,8 @@ RUN mkdir {{ paths.environment }} \
 {{ manifest }} > {{ paths.environment }}/spack.yaml
 
 # Install the software, remove unnecessary deps
-RUN cd {{ paths.environment }} && spack env activate . && spack install --fail-fast && spack gc -y
+RUN cd {{ paths.environment }} && spack env activate . && spack install --fail-fast
+#RUN spack gc -y
 {% if strip %}
 
 # Strip all the binaries
